--- a/styles.css
+++ b/styles.css
@@ -3614,7 +3614,24 @@ div .form-check {
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
-.card-text-isSkuIncluded > i, .card-text-isSkuIncludedPlaceIt > i{
+.card-text-isNotSkuIncludedPlaceIt {
+    text-align: center;
+    font-size: x-small;
+    background-color: orangered; 
+    color: #FFFFFF; 
+    padding: 2px 5px 15px 5px;
+    border-top: 4px solid orange;
+    border-radius: 10px 10px 0 0; 
+    margin: 8px 0;
+    margin-bottom: -10px;
+    text-transform: uppercase;
+    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    margin-top: 0;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
+}
+
+.card-text-isSkuIncluded > i, .card-text-isSkuIncludedPlaceIt > i, .card-text-isNotSkuIncludedPlaceIt > i{
     font-size: 1.2rem;
     color: yellow;
 }
