--- a/styles.css
+++ b/styles.css
@@ -2558,7 +2558,7 @@ div.card-body > p > i{
     padding: 8px 10px; 
     border-radius: 0 0 15px 15px; 
     position: relative; 
-    background-color: #34C759; 
+    background-color: #34C759;  
     text-transform: uppercase;
     color: white;
     display: flex; 
@@ -3110,13 +3110,12 @@ div.card-body > p > i{
 }
 
 .numeroDeEnvioGeneradoBNA {
-    font-family: "Roboto", sans-serif;
+    font-family: "Rubik", sans-serif;
     text-align: center;
     color: #2c3e50; 
     margin-bottom: 0px;
     background-color: #ecf0f1; 
     border: 1px solid #bdc3c7; 
-    font-weight: 900 !important;
     padding: 12px 16px; 
     box-shadow: 0 0px 8px rgba(0, 0, 0, 0.1); 
     transition: background-color 0.3s, box-shadow 0.3s; 
@@ -3125,7 +3124,7 @@ div.card-body > p > i{
 .numeroDeEnvioGeneradoBNA a {
     color: inherit; 
     text-decoration: none; 
-    font-weight: bold; 
+    font-weight: 500; 
 }
 
 .numeroDeEnvioGeneradoBNA a:hover {
@@ -3599,41 +3598,44 @@ div .form-check {
 
 .card-text-isSkuIncludedPlaceIt {
     text-align: center;
-    font-size: x-small;
-    background-color: #4CAF50; 
-    color: #FFFFFF; 
+    font-size: small;
+    border: 1px solid #ccc;
+    background-color: #ecf0f1;
+    color: #34C759;
+    border-top: 2px solid #34C759;
+    font-family: "Rubik", sans-serif;
     padding: 2px 5px 15px 5px;
-    border-top: 4px solid yellow;
-    border-radius: 10px 10px 0 0; 
+    border-radius: 15px 15px 0 0; 
     margin: 8px 0;
     margin-bottom: -10px;
-    text-transform: uppercase;
-    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-    font-weight: 600;
     margin-top: 0;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .card-text-isNotSkuIncludedPlaceIt {
     text-align: center;
-    font-size: x-small;
-    background-color: orangered; 
-    color: #FFFFFF; 
+    font-size: small;
+    border: 1px solid #ccc;
+    background-color: #ecf0f1;
+    color: orangered;
+    border-top: 2px solid orangered;
+    font-family: "Rubik", sans-serif;
     padding: 2px 5px 15px 5px;
-    border-top: 4px solid orange;
-    border-radius: 10px 10px 0 0; 
+    border-radius: 15px 15px 0 0; 
     margin: 8px 0;
     margin-bottom: -10px;
-    text-transform: uppercase;
-    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-    font-weight: 600;
     margin-top: 0;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
-.card-text-isSkuIncluded > i, .card-text-isSkuIncludedPlaceIt > i, .card-text-isNotSkuIncludedPlaceIt > i{
+.card-text-isSkuIncluded > i, .card-text-isSkuIncludedPlaceIt > i{
     font-size: 1.2rem;
-    color: yellow;
+    color: #34C759;
+}
+
+.card-text-isNotSkuIncludedPlaceIt > i{
+    font-size: 1.2rem;
+    color: orangered;
 }
 
 /* Estilo específico para alertError */
@@ -6643,18 +6645,20 @@ img.gray-filter {
     align-items: center;
     margin-bottom: 10px;
     color: #721c24;
-    font-weight: 700;
+    font-family: "Rubik", sans-serif;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
 .slack-error-header2 {
     font-size: medium;
+    font-family: "Rubik", sans-serif;
     text-align: center;
     display: flex;
     align-items: center;
     margin-bottom: 10px;
     color: #2f610b;
-    font-weight: 700;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
@@ -6666,13 +6670,15 @@ img.gray-filter {
 .slack-error-message {
     color: #dc3545;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
+    font-family: "Rubik", sans-serif;
 }
 
 .slack-error-message2 {
     color: green;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
+    font-family: "Rubik", sans-serif;
 }
 
 .card-facturacion-meli {
@@ -7000,14 +7006,15 @@ img.gray-filter {
     text-align: center;
     padding: 3px 12px;
     border-radius: 15px;
-    background-color: #ecf0f1;
     margin-bottom: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid #ccc;
+    background-color: #ecf0f1;
     padding-top: 40px;
     margin-top: -40px;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); 
 }
 
 .icon-stock-tv {
@@ -7016,16 +7023,23 @@ img.gray-filter {
 }
 
 .status-text-stock-tv {
-    font-size: 0.85em;
+    font-size: .9rem;
     font-weight: 500;
     margin: 0;
 }
 
 .stock-bajo-stock-tv {
     color: #FF3B30;
+    font-family: "Rubik", sans-serif;
+}
+
+.sin-stock{
+    color: #FF3B30;
+    font-family: "Rubik", sans-serif;
 }
 
 .stock-normal-stock-tv {
     color: #34C759;
+    font-family: "Rubik", sans-serif;
 }
 /* FIN STOCK PRECIO */
