--- a/styles.css
+++ b/styles.css
@@ -3579,21 +3579,20 @@ div .form-check {
 }
 
 .card-text-isSkuIncluded{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150);
     text-align: center;
     font-size: small;
-    background-color: crimson;
-    color: white; 
+    border: 1px solid #ccc;
+    background-color: #ecf0f1;
+    color: crimson;
+    border-top: 2px solid crimson;
+    font-family: "Rubik", sans-serif;
     padding: 2px 5px 15px 5px;
-    border-top: 3px solid rgb(138, 0, 28); 
-    border-radius: 10px 10px 0 0; 
+    border-radius: 15px 15px 0 0; 
     margin: 8px 0;
     margin-bottom: -10px;
-    font-size: small;
-    text-transform: uppercase;
-    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-    font-weight: 600;
     margin-top: 0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150); 
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .card-text-isSkuIncludedPlaceIt {
@@ -3628,9 +3627,14 @@ div .form-check {
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
-.card-text-isSkuIncluded > i, .card-text-isSkuIncludedPlaceIt > i{
+.card-text-isSkuIncludedPlaceIt > i{
     font-size: 1.2rem;
     color: #34C759;
+}
+
+.card-text-isSkuIncluded > i{
+    font-size: 1.2rem;
+    color: crimson;
 }
 
 .card-text-isNotSkuIncludedPlaceIt > i{
@@ -4103,37 +4107,37 @@ div .form-check {
 }
 
 .carrito {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150);
     text-align: center;
-    background: linear-gradient(to bottom, #ffe4e0, #ffe4e9);
-    color: #c62828; 
+    font-size: small;
+    border: 1px solid #ccc;
+    background-color: #ecf0f1;
+    color: #ef5350;
+    border-top: 2px solid #ef5350;
+    font-family: "Rubik", sans-serif;
     padding: 2px 5px 15px 5px;
-    border-top: 3px solid #ef5350; 
-    border-radius: 10px 10px 0 0; 
+    border-radius: 15px 15px 0 0; 
     margin: 8px 0;
     margin-bottom: -10px;
-    font-size: small;
-    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-    font-weight: 600;
     margin-top: 0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150); 
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .puntos {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150);
     text-align: center;
     font-size: small;
-    background: linear-gradient(to bottom, #deffa1, rgba(255, 255, 255, 0));
-    background-color: #deffa1;
-    color: green; 
+    border: 1px solid #ccc;
+    background-color: #ecf0f1;
+    color: #34C759;
+    border-top: 2px solid #34C759;
+    font-family: "Rubik", sans-serif;
     padding: 2px 5px 15px 5px;
-    border-top: 3px solid green; 
-    border-radius: 10px 10px 0 0; 
+    border-radius: 15px 15px 0 0; 
     margin: 8px 0;
     margin-bottom: -10px;
-    font-size: small;
-    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-    font-weight: 600;
     margin-top: 0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.150); 
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .puntos-icon {
