--- a/styles.css
+++ b/styles.css
@@ -6787,10 +6787,19 @@ img.gray-filter {
 }
 
 .import-spinner-progress {
-    margin-top: 10px;
-    color: white;
-    font-size: 24px;
-}
+    margin-top: 12px;
+    color: #ffffff;
+    font-size: 30px;
+    font-family: "Rubik", sans-serif !important;
+    font-weight: 500;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 6px 16px;
+    border-radius: 12px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+  }
+  
 
 .spinner-container-colecta {
     position: relative;
