--- a/styles.css
+++ b/styles.css
@@ -7289,6 +7289,8 @@ img.gray-filter {
   
 /* CONTENEDOR POSVENTA */
 .mac-cell-posventa {
+    margin-top: 5px;
+    margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -7328,6 +7330,18 @@ img.gray-filter {
 }
 
 .mac-cell-posventa .venta-id i:hover {
+    transform: scale(1.2);
+}
+
+.icon-user-plus {
+    font-size: 20px;
+    cursor: pointer;
+    transition: transform 0.2s;
+    color: grey !important;
+    z-index: 1000;
+}
+
+.icon-user-plus:hover {
     transform: scale(1.2);
 }
 
@@ -7476,3 +7490,78 @@ img.gray-filter {
     z-index: 1002;
 }
 /* FIN AVATARS */
+
+/* AVATARS BURBUJAS */
+.bubble-filaDeDatos {
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    border-radius: 10px; 
+    padding: 5px; 
+    z-index: 1000; 
+    max-width: 250px; 
+    position: absolute; 
+    bottom: -20px; 
+    left: -90px; 
+    margin-left: 80px; 
+}
+
+.avatar-filaDeDatos {
+    width: 40px;
+    height: 40px; 
+    border-radius: 50%;
+    margin-bottom: 5px; 
+    background-color: white; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    z-index: 10;
+}
+
+.mensaje-filaDeDatos {
+    font-size: 0.6rem;
+    color: white;
+    background-color: #4cd964;
+    border-radius: 18px 18px 18px 18px;
+    padding: 6px 10px;
+    text-align: start;
+    white-space: nowrap;
+    margin-top: -20px;
+    margin-left: 39px;
+    position: relative;
+
+    /* Efecto bisel leve */
+    box-shadow:
+        inset 0 1px 0 rgba(255, 255, 255, 0.3),
+        0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.mensaje-filaDeDatos::before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    left: 0px;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-top: none;
+    border-bottom: 9px solid #4cd964; 
+    transform: rotate(80deg);
+}
+
+
+.mensaje-filaDeDatos.orange-day::before {
+    border-bottom-color: orange;
+  }
+  
+  .mensaje-filaDeDatos.red-day::before {
+    border-bottom-color: red;
+  }
+
+.orange-day {
+    background-color: orange !important;
+  }
+  
+  .red-day {
+    background-color: red !important; 
+  }
+  
+/* FIN AVATARS BURBUJAS */
